# pulse-framework

./: .gitignore  04-command-catalog.md  06-master-router.md  07-customer-profile-questionnaire.md  08-implementation-plan.md  AGENTS.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  ruff.toml  setup
default_assets/: config.template.yaml
default_assets/knowledge/: glossary.yaml
default_assets/playbooks/: daily.yaml  monthly.yaml  onboard.yaml  quarterly.yaml  reposition.yaml  weekly.yaml
default_assets/router/: tree.yaml
docs/: 00-framework-vision.md  01-knowledge-corpus.md  02-workspace-and-state.md  03-skill-anatomy.md  05-playbooks-and-composition.md  09-future-architecture.md  10-corpus-setup-guide.md  11-appendix-types-and-schemas.md
pulse/: __init__.py  cli.py  dispatcher.py  install_skills.py  manifest.py  mcp_server.py
pulse/commands/: corpus.py  evolve_all.py  export.py  help.py  import_refinements.py  init.py  refine.py  refine_from_runs.py  reindex.py  workspace_list.py  workspace_new.py  workspace_status.py  workspace_switch.py
pulse/runtime/: atoms.py  chunking.py  corpus.py  heuristics.py  index.py  interactive.py  knowledge.py  llm.py  playbook.py  questionnaire.py  refinement.py  router.py  runs.py  schemas.py  skill.py  workspace.py
pulse/utils/: atomic_write.py  jinja_env.py  paths.py  prompts.py
scripts/: generate_agent_skills.py
tests/: conftest.py
tests/integration/: test_assets_valid.py  test_workspace_flow.py
tests/unit/: test_cli.py  test_corpus.py  test_dispatcher.py  test_export.py  test_heuristics.py  (+10 more)
(+106 files in other folders)
